<resources>
    <string name="app_name">DriveUS</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="logIn">Acceder</string>
    <string name="prefs_file">com.example.driveus_mvvm.PREFERENCE_FILE_KEY</string>
    <string name="activity_auth__button__sign_up_button">Registrarse</string>
    <string name="activity_sig_up__label__name_edit_text">Nombre</string>
    <string name="activity_sign_up__label__surname_edit_text">Apellidos</string>
    <string name="activity_sign_up__label__username_edit_text">Nombre de usuario</string>
    <string name="activity_sign_up__label__email_edit_text">Email</string>
    <string name="activity_sign_up__label__password_edit_text">Contraseña</string>
    <string name="activity_sign_up__label__password_repeat_edit_text">Repetir contraseña</string>
    <string name="activity_sign_up__button__sign_up">Registrarse</string>
    <string name="sign_up_form_error_not_empty">Debe completar este campo</string>
    <string name="sign_up_title">Registro</string>
    <string name="sign_up_form_error_email_in_use">Este email ya está en uso</string>
    <string name="sign_up_form_error_email_pattern">Formato del email no válido</string>
    <string name="sign_up_form_error_max_50">Máximo 50 caracteres</string>
    <string name="sign_up_form_error_pass_not_match">La contraseña no coincide</string>
    <string name="sign_up_form_error_username_in_use">El nombre de usuario ya en uso</string>
    <string name="menu__item__my_rides">Mis viajes</string>
    <string name="menu__item__channels">Canales</string>
    <string name="menu__item__payouts">Pagos</string>
    <string name="menu__item__profile">Mi perfil</string>
    <string name="login_dialog__message__error">Se ha producido un error autenticando al usuario</string>
    <string name="login_dialog__message__title">Error</string>
    <string name="login_dialog__message__positive_message">Aceptar</string>
    <string name="profile_fragment__label__name">Nombre: </string>
    <string name="profile_fragment__label__email_label">Email:</string>
    <string name="profile_fragment__label__car_title">Tus coches registrados</string>
    <string name="car_row__label__seat_label">Asientos: </string>
    <string name="car_row__label__brand_model_test">Modelo y Marca</string>
    <string name="car_row__label_seat_value_test">5</string>
    <string name="car_row__label__color">Color:</string>
    <string name="car_row__label__description">Descripción</string>
    <string name="car_row__label_color_value_test">Blanco</string>
    <string name="profile_fragment__label__no_car_title">Aún no eres conductor en DriveUS. Da de alta a tu vehículo y
        conviértete en uno
    </string>
    <string name="profile_fragment__label__username_test">Usuario</string>
    <string name="profile_fragment__label__add_car_button">Añadir vehículo</string>
    <string name="fragment_add_car__label_title">Registra tu vehículo</string>
    <string name="fragment_add_car__label__car_brand_value">Marca</string>
    <string name="fragment_add_car__label__car_model_edit_text">Modelo</string>
    <string name="fragment_add_car__label__car_color_edit_text">Color</string>
    <string name="fragment_add_car__label__car_seats_edit_text">Nº asientos</string>
    <string name="fragment_add_car__label__car_description_edit_text">Descripción</string>
    <string name="fragment_add_car__button_add_car">Añadir</string>
    <string name="channels_fragment__label__tab_explore">Explorar</string>
    <string name="channels_fragment__label__tab_my_channels">Mis canales</string>
    <string name="channel_row__label__origin_zone_icon_content_description">Origin zone icon</string>
    <string name="channel_row__label__destination_zone_icon_content_description">Destination zone icon</string>
    <string name="all_channels_label_saerch_hint">Buscar zona…</string>
    <string name="all_channels__label__filter_image_content_description">Filtro de canales</string>
    <string name="shared_pref_doc_id_key">docId</string>
    <string name="dialog_delete_car__label__body">¿Está seguro de que quiere eliminar este vehículo de su lista?</string>
    <string name="dialog_delete_car__button__accept">Aceptar</string>
    <string name="dialog_delete_car__label__cancel">Cancelar</string>
    <string name="dialog_profile_pic___label__cancel">Cancelar</string>
    <string name="dialog_profile_pic__label__delete">Eliminar</string>
    <string name="dialog_profile_pic__label__change">Cambiar imagen</string>
    <string name="dialog_profile_pic__label__title">Imagen de perfil</string>
    <string name="my_rides_fragment__label__tab_coming_rides">Próximos</string>
    <string name="my_rides_fragment__label__tab_record">Historial</string>
    <string name="menu_top_bar__label__log_out">Cerrar sesión</string>
    <string name="fragment_ride_form__label__title">Nuevo trayecto</string>
    <string name="fragment_ride_form__label__capacity_edit_text">Nº de plazas disponibles</string>
    <string name="fragment_ride_form__label__price_edit_text">Precio</string>
    <string name="fragment_ride_form__label__meeting_point_edit_text">Punto de encuentro</string>
    <string name="fragment_ride_form__label__button_submit">Enviar</string>
    <string name="ride_form_error_price_decimals">Debe contener dos cifras decimales máximo</string>
    <string name="fragment_ride_form__label__date_time_edit_text">Fecha y hora</string>
    <string name="ride_form_error_date_time_past">El viaje debe resgistrarse en una fecha futura</string>
    <string name="ride_form_error_location_not_found">Localización no reconocida</string>
    <string name="my_channels_fragment__label__no_channels">Aún no estás suscrito a ningún canal</string>
    <string name="channel_detail_fragment__label__no_rides">No hay trayectos en este canal</string>
    <string name="my_channels_fragment__label__no_rides">No tienes trayectos próximamente</string>
    <string name="my_rides_record__label__no_rides">Aún no tienes trayectos registrados</string>
    <string name="ride_detail__label__price">Precio</string>
    <string name="ride_detail__label__capacity">Aforo</string>
    <string name="ride_detail__label__date">Fecha de salida</string>
    <string name="dialog_passenger__label__title">Pasajeros</string>
    <string name="ride_detail__label__button">Unirse</string>
    <string name="ride_detail__label__button_not_join">Eliminarse</string>
    <string name="fragment_ride_payouts_detail_list__label__total_money">TOTAL RECAUDADO</string>
    <string name="my_rides_record_list__label__role_button_passenger">VIAJES COMO PASAJERO</string>
    <string name="my_rides_record_list__label__role_button_driver">VIAJES COMO CONDUCTOR</string>
    <string name="ride_form_error_max_capacity">Este vehículo no dispone de tantas plazas</string>
    <string name="fragment_ride_form__label__check_box">Se repite</string>
    <string name="fragment_ride_form__label__time_repeat">Hora</string>
    <string name="fragment_ride_form__label__time_end_repeat_edit_text">Fecha límite (máx 4 meses)</string>
    <string name="ride_form_error_no_days_of_week">Ningún día seleccionado</string>
    <string name="ride_form_error_limit_4_months">Máximo de 4 meses de antelación</string>
    <string name="channel_detail__label__filter_text">Filtrar por día y periodo</string>
    <string name="sign_up_error_save_session_tag">Error al iniciar sesión</string>
    <string name="dialog_join_ride__label__accept">Aceptar</string>
    <string name="dialog_join_ride__label__cancel">Cancelar</string>
    <string name="dialog_join_ride__text__">Al apuntarse a un viaje se genera una deuda con el conductor. ¿Está
        seguro?
    </string>
    <string name="dialog_disjoin_ride__text__">Si se elimina de la lista de pasajeros no podrá ocupar una plaza en este
        viaje (si ya ha pagado se le generará una deuda al conductor). ¿Está seguro?
    </string>
    <string name="dialog_check_payout_as_unpaid_label">Si marca el pago como no saldado, se volverá a generar una deuda
        del pasajero hacia usted. ¿Desea continuar?
    </string>
    <string name="dialog_join_ride_title">Unirse al viaje</string>
    <string name="dialog_disjoin_ride_title">Borrarse de la lista de pasajeros</string>
    <string name="dialog_check_payout_as_unpaid_title">Marcar trayecto como no pagado</string>
    <string name="payouts_fragment_button__label__driver">COBROS COMO CONDUCTOR</string>
    <string name="payouts_fragment_button__label__passenger">DEUDAS COMO PASAJERO</string>
    <string name="fragment_payout__label__debts_button">¡DEUDAS DE VIAJES NO REALIZADOS!</string>
    <string name="fragment_payout_debt__label__title_passenger">Deudas pendientes de cobro como pasajero</string>
    <string name="fragment_payout_debt__label__title_driver">Deudas pendientes de pago como conductor</string>
    <string name="fragment_payout_label_filter_hint">Filtrar entre mis pasajeros</string>
    <string name="dialog_payout_users_list_title">Selecciona un usuario</string>
    <string name="dialog_delete_ride__text__">Si elimina el viaje se generará una deuda en favor de los pasajeros que ya
        hayan realizado el pago. ¿Está seguro?
    </string>
    <string name="ride_detail__label__deleted">Este viaje ha sido eliminado</string>
    <string name="my_coming_rides_fragment_filter_hint">Filtrar por rango de días</string>
    <string name="my_rides_record_filter_dialog_end_title">Selecciona fecha de fin</string>
    <string name="my_rides_record_filter_dialog_start_title">Selecciona fecha de inicio</string>
    <string name="my_rides_record_filter_dialog_toast_validation_error">No puedes seleccionar fechas de fin antes que de
        comienzo
    </string>
    <string name="menu_top_bar__label__change_password">Cambiar contraseña</string>
    <string name="fragment_change_password_send_email_message">Al pulsar sobre el botón se te enviará un email donde
        podrás cambiar la contraseña de tu cuenta.
    </string>
    <string name="change_password_send_email_failure">Se ha producido un error al enviar el email. Vuelve a intentarlo
        más tarde.
    </string>
    <string name="fragment_edit_vehicle__label__title">Editar vehiculo</string>
    <string name="fragment_edit_vehicle_color_input_hint">Nuevo color</string>
    <string name="fragment_edit_vehicle_description_input_hint">Nueva descripción</string>
    <string name="menu_top_bar__label__edit_user">Cambiar o editar nombre</string>
    <string name="fragment_edit_user_name_title">Editar nombre</string>
    <string name="fragment_edit_user_name__input__surname_edit">Apellidos</string>
    <string name="fragment_edit_user_name__input__name_edit">Nombre</string>
    <string name="fragment_edit_user_name__button__save">Guardar</string>
    <string name="fragment_edit_vehicle__button__edit_car">Guardar</string>
    <string name="connection_failed_message">Necesitas tener conexión a internet para realizar esta operación</string>
    <string name="fragment_payout__label__no_payouts_passenger">No tienes deudas como pasajero</string>
    <string name="fragment_payout__label__no_payouts_driver">No tienes cobros pendientes como conductor</string>
    <string name="menu_top_bar__item__help">Ayuda</string>
    <string name="dialog_help_profile1">Puedes editar tu foto de perfil o eliminarla pulsando sobre ella. También puedes
        editar tus datos y cerrar sesión pulsando el botón de opciones de arriba a la derecha.
    </string>
    <string name="dialog_help_profile2">Accede a las ventajas de un conductor añadiendo un coche en tu historial. Para
        ello debes pulsar el botón \"+\" y rellenar un sencillo formulario.
    </string>
    <string name="dialog_help__image__arrow_left">Previous</string>
    <string name="dialog_help_profile3">Puedes modificar los datos de tus vehículos si lo deseas, pero solo podrás
        eliminarlo si no has registrado ningún viaje con él.
    </string>
</resources>