<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/myRidesFragment"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/menu__item__my_rides"/>

    <item
            android:id="@+id/channelsFragment"
            android:icon="@drawable/ic_round_campaign_24"
            android:title="@string/menu__item__channels"/>

    <item
            android:id="@+id/payoutsFragment"
            android:icon="@drawable/ic_round_attach_money_24"
            android:title="@string/menu__item__payouts"/>

    <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_round_person_24"
            android:title="@string/menu__item__profile"/>

</menu>