<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_top_bar__item__edit_user"
        android:title="@string/menu_top_bar__label__edit_user"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_top_bar__item__change_password"
        android:title="@string/menu_top_bar__label__change_password"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_top_bar__item__log_out"
        android:title="@string/menu_top_bar__label__log_out"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_top_bar__item__help"
        android:title="@string/menu_top_bar__item__help"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_round_help_outline_24"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />
</menu>