<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/dialog_profile_pic_cancel"
            android:text="@string/dialog_profile_pic___label__cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/dialog_profile_pic_delete"
            android:text="@string/dialog_profile_pic__label__delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/dialog_profile_pic_cancel"/>

    <TextView
            android:id="@+id/dialog_profile_pic_change"
            android:text="@string/dialog_profile_pic__label__change"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/dialog_profile_pic_delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>