<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/authLayout"
            android:orientation="vertical"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <EditText
                android:id="@+id/activity_auth__input__email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/email"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
        <EditText
                android:id="@+id/activity_auth__input__password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:text="@string/logIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/activity_auth__button__log_in_button"
                    android:layout_weight="1"/>
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <Button
                    android:text="@string/activity_auth__button__sign_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/activity_auth__button__sign_up_button" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>