<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/dialog_disjoin_ride__text__"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="16dp"
            android:text="@string/dialog_disjoin_ride__text__"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:id="@+id/dialog_disjoin_ride__button__accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_join_ride__label__accept"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dialog_disjoin_ride__button__cancel"
            app:layout_constraintTop_toBottomOf="@id/dialog_disjoin_ride__text__"/>

    <Button
            android:id="@+id/dialog_disjoin_ride__button__cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_join_ride__label__cancel"
            app:layout_constraintStart_toEndOf="@id/dialog_disjoin_ride__button__accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_disjoin_ride__text__"/>

</androidx.constraintlayout.widget.ConstraintLayout>