<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/fragment_edit_vehicle__label__title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_edit_vehicle__label__title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_edit_vehicle__input__color"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_edit_vehicle__input__color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_edit_vehicle__label__title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/fragment_edit_vehicle__input__color_edit"
                android:hint="@string/fragment_edit_vehicle_color_input_hint"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:importantForAutofill="no"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_edit_vehicle__input__description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_edit_vehicle__input__color">

        <EditText
                android:id="@+id/fragment_edit_vehicle__input__description_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fragment_edit_vehicle_description_input_hint"
                android:inputType="textLongMessage" android:importantForAutofill="no"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_edit_vehicle__button__edit_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_edit_vehicle__button__edit_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_edit_vehicle__input__description" />
</androidx.constraintlayout.widget.ConstraintLayout>